Gray post titles, correct about me wrapping

--- a/css/main.scss
+++ b/css/main.scss
@@ -45,6 +45,7 @@ $on-laptop:        800px;
 
 .post-title, .post-meta {
   text-align: center;
+  color: $grey-color;
 }
 
 
